<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/opts">

        <item android:id="@+id/fragment_themes_menu_item_add"
            android:title="@string/fragment_themes_menu_item_add" android:icon="@drawable/ic_action_add" app:showAsAction="ifRoom|withText" />

        <item android:id="@+id/menu_item_import_cards"
            android:title="@string/fragment_themes_menu_item_import_cards" android:icon="@drawable/ic_action_import_cards" />


        <item android:id="@+id/menu_item_import_from_folder_all"
            android:title="@string/menu_item_import_from_folder_all" />
        <item android:id="@+id/menu_item_from_folder"
            android:title="@string/menu_item_from_folder">
            <menu>
                <item android:id="@+id/menu_item_from_folder_import_new"
                    android:title="@string/menu_item_import_new" />
                <item android:id="@+id/menu_item_from_folder_update_exists"
                    android:title="@string/menu_item_update_exists" />
                <item android:id="@+id/menu_item_from_folder_import_as_new"
                    android:title="@string/menu_item_import_as_new" />
            </menu>
        </item>


        <item android:id="@+id/menu_item_import_from_zip_all"
            android:title="@string/menu_item_import_from_zip_all" />
        <item android:id="@+id/menu_item_from_zip"
            android:title="@string/menu_item_from_zip">
            <menu>
                <item android:id="@+id/menu_item_from_zip_import_new"
                    android:title="@string/menu_item_import_new" />
                <item android:id="@+id/menu_item_from_zip_update_exists"
                    android:title="@string/menu_item_update_exists" />
                <item android:id="@+id/menu_item_from_zip_import_as_new"
                    android:title="@string/menu_item_import_as_new" />
            </menu>
        </item>

        <item android:id="@+id/menu_item_online_import_cards"
            android:title="@string/fragment_themes_menu_item_remote_import_cards" android:icon="@drawable/ic_action_import_cards" />
        <item android:id="@+id/menu_item_export_all_to_dir"
            android:title="@string/fragment_themes_menu_item_export_all_to" />
        <item android:id="@+id/menu_item_export_all_to_email"
            android:title="@string/fragment_themes_menu_item_export_all_to_email" />


        <!--item android:id="@+id/fragment_themes_menu_item_show_courses"
            android:title="@string/fragment_themes_menu_item_show_courses" /-->
        <item android:id="@+id/menu_item_log"
            android:title="log" />

    </group>

    <group android:id="@+id/settings">
        <item android:id="@+id/menu_item_settings"
            android:title="@string/menu_item_settings" />
    </group>

</menu>
