<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        style="@style/AppTheme.screenHeader"
        android:text="@string/cards_view_res_title"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/viewed_cards_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/AppTheme.subHeader"
            android:text="@string/cards_view_res_viewed_cards"
            />
        <TextView
            android:id="@+id/err_cards_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/AppTheme.subHeader"
            android:text="@string/cards_view_res_err_cards"
            />

        <TextView
            android:id="@+id/schedule_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/AppTheme.subHeader"
            android:text="@string/cards_view_res_schedule_text"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/schedule_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards_view_res_schedule_none"
            style="@style/AppTheme.controlButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            style="@style/AppTheme.controlButton"
            />

    </LinearLayout>


</LinearLayout>