<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/qpacks_search_hint" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/favorite_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/qpacks_favorites_check_box_title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_by_last_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qpacks_menu_item_by_last_view_date" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_by_creation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qpacks_menu_item_by_creation_date" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>