<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp">

    <CheckBox
        android:id="@+id/favorite_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards_view_favorite_box"
        android:layout_gravity="end"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23sp"
            />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/cards_view_back_from_answer_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wrong_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/cards_view_wrong_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_card_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cards_view_next_btn" />
    </LinearLayout>

</LinearLayout>