<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prev_card_btn"
            android:text="@string/cards_view_previous_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_answer_btn"
            android:text="@string/cards_view_view_answer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_card_btn"
            android:text="@string/cards_view_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


</LinearLayout>