<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <FrameLayout
        android:id="@+id/externalContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/innerContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/qpack_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                style="@style/AppTheme.screenHeader"
                />

            <TextView
                android:id="@+id/qpack_cards_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                style="@style/AppTheme.subHeader"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qpack_btn_view_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qpack_btn_view_cards"
                    style="@style/AppTheme.controlButton"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qpack_btn_add_to_new_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qpack_btn_add_to_new_course"
                    style="@style/AppTheme.controlButton"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qpack_btn_add_to_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qpack_btn_add_to_course"
                    style="@style/AppTheme.controlButton"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qpack_btn_view_courses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qpack_btn_view_courses"
                    style="@style/AppTheme.controlButton"
                    />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <include layout="@layout/bottom_sheet_cards" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>