<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/innerContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >


    <TextView

        android:id="@+id/qpack_title"
        style="@style/AppTheme.screenHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="30dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:text="Заголовок" />

    <TextView

        android:id="@+id/qpack_cards_count"
        style="@style/AppTheme.subHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qpack_title"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:text="Карточек: 10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/qpack_btn_view_cards"
        style="@style/AppTheme.controlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qpack_btn_view_cards"
        app:layout_constraintBottom_toTopOf="@+id/qpack_btn_view_uncompleted"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="146dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/qpack_btn_view_uncompleted"
        style="@style/AppTheme.controlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qpack_btn_view_uncompleted"
        app:layout_constraintBottom_toTopOf="@+id/qpack_btn_add_to_course"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qpack_btn_view_cards"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="146dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/qpack_btn_add_to_course"
        style="@style/AppTheme.controlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qpack_btn_add_to_course"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/qpack_btn_add_to_new_course"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qpack_btn_view_uncompleted"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="179dp" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/qpack_btn_add_to_new_course"
        style="@style/AppTheme.controlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qpack_btn_add_to_new_course"
        app:layout_constraintBottom_toTopOf="@+id/qpack_btn_view_courses"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qpack_btn_add_to_course"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="174dp" />


    <com.google.android.material.button.MaterialButton

        android:id="@+id/qpack_btn_view_courses"
        style="@style/AppTheme.controlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qpack_btn_view_courses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qpack_btn_add_to_new_course"
        app:layout_constraintVertical_bias="0"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="171dp" />


</androidx.constraintlayout.widget.ConstraintLayout>